--- a/css/animation.css
+++ b/css/animation.css
@@ -1,5 +1,5 @@
 /* 글자 테두리 후 면 가득차게 */
-@keyframes line-anim {
+/* @keyframes line-anim {
   to {
     stroke-dashoffset: 0;
   }
@@ -12,7 +12,7 @@
   to {
     fill: var(--white);
   }
-}
+} */
 
 /* 라인 빙글 */
 @keyframes rotate-left {
